--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-My extensions for GNOME 3
+Extensions for GNOME Shell.
 
-License is: GPL2 or later
+See individual extension directories for licenses.
